--- a/train-schedule-kube.yml
+++ b/train-schedule-kube.yml
@@ -36,3 +36,124 @@ spec:
         image: linuxacademycontent/train-schedule:1
         ports:
         - containerPort: 8080
+---
+# Sprtingboot RC
+apiVersion: v1
+kind: ReplicationController
+metadata:
+  labels:
+    name: springboot
+  name: spring-controller
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        name: springboot
+    spec:
+      containers:
+        - name: springboot
+          image: kaushikarvind/spring-mongo-docker-k8s
+          ports:
+            - name: springboot
+              containerPort: 8080
+
+---
+# Springboot Node Port Service 
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    name: springboot
+  name: springboot
+spec:
+  type: NodePort
+  ports:
+    - port: 8080
+      targetPort: 8080
+  selector:
+    name: springboot
+
+---
+# PetClinic RC 
+apiVersion: v1
+kind: ReplicationController
+metadata:
+  labels:
+    name: petclinic
+  name: petclinic-controller
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        name: petclinic
+    spec:
+      containers:
+        - name: petclinic
+          image: kaushikarvind/petclinic:8
+          ports:
+            - name: petclinic
+              containerPort: 8080
+
+---
+# PetClinic Node Port Service
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    name: petclinc
+  name: petclinic
+spec:
+  type: NodePort
+  ports:
+    - port: 8080
+      targetPort: 8080
+  selector:
+    name: petclinic
+
+---
+# Mongo host path rc
+apiVersion: v1
+kind: ReplicationController
+metadata:
+  labels:
+    name: mongo
+  name: mongo-controller
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        name: mongo
+    spec:
+      containers:
+      - image: mongo
+        name: mongo
+        ports:
+        - name: mongo
+          containerPort: 27017
+          hostPort: 27017
+        volumeMounts:
+        - name: mongo-persistent-storage
+          mountPath: /data/db
+      volumes:
+      - name: mongo-persistent-storage
+        hostPath:
+          path: /tmp/dbbackup
+
+---
+# Mongo Node Port RC
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    name: mongo
+  name: mongo
+spec:
+  type: ClusterIP
+  ports:
+    - port: 27017
+      targetPort: 27017
+  selector:
+    name: mongo
